--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <!-- <a href="download" ></a> -->
+    <h1>hello</h1>
   </body>
   <script>
-    document.location.href = "file.apk";
+    // document.location.href = "file.apk";
   </script>
 </html>
