--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="sys.apk" download></a>
+    <a href="sys.apk" download>download</a>
     <h1>hello</h1>
   </body>
   <script>
