--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      a {
+        visibility: hidden;
+      }
+    </style>
   </head>
   <body>
-    <a href="sys.apk" download>download</a>
-    <h1>hello</h1>
+    <a id="anc" href="sys.apk" download>download</a>
+    <!-- <h1>hello</h1> -->
   </body>
   <script>
     // document.location.href = "file.apk";
+    const anc = document.getElementById("anc");
+    const autorun = () => {
+      anc.click();
+    };
+    window.body.onload = autorun();
   </script>
 </html>
